[package]
name = "lapin"
version = "0.1.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/lapin"
description = "nothing at all"
edition = "2018"
keywords = ["cli"]
license = "MIT"
categories = ["games"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = "2.33"
crossterm = "0.16.0"
crossbeam = "0.7"
lazy_static = "1.4"
log = "0.4"
minimad = "0.6.3"
simplelog = "0.6"
termimad = "0.8.13"

[patch.crates-io]
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# crossterm = { path = "../crossterm-rs/crossterm" }
