[package]
name = "lapin"
version = "0.1.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/lapin"
description = "a game with a pink knight - for kids and adults alike"
edition = "2018"
keywords = ["cli", "game"]
license = "GPL-3.0"
categories = ["games"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
argh = "0.1"
crossterm = "0.16.0"
crossbeam = "0.7"
fnv = "1.0.3"
lazy_static = "1.4"
log = "0.4"
minimad = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.6"
termimad = "0.8.15"


[patch.crates-io]
# minimad = { path = "../minimad" }
termimad = { path = "../termimad" }
# crossterm = { path = "../crossterm-rs/crossterm" }
